// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseQUery all()  1`] = `
Array [
  Object {
    "id": 1,
    "name": "Onboarding Rest",
  },
  Object {
    "id": 2,
    "name": "Project Audit Rest",
  },
  Object {
    "id": 3,
    "name": "QA Checklist Rest",
  },
]
`;

exports[`BaseQUery find()  1`] = `
Object {
  "id": 1,
  "name": "Onboarding Rest",
}
`;

exports[`BaseQUery includes()  1`] = `
Array [
  Object {
    "id": 1,
    "name": "Onboarding Rest",
    "tasks": Array [
      Object {
        "description": "Onboarding REST 1",
        "id": 1,
        "type": "tasks",
      },
      Object {
        "description": "Onboarding REST 2",
        "id": 2,
        "type": "tasks",
      },
    ],
  },
  Object {
    "id": 2,
    "name": "Project Audit Rest",
    "tasks": Array [
      Object {
        "description": "Project Audit Rest 3",
        "id": 3,
        "type": "tasks",
      },
      Object {
        "description": "Project Audit Rest 4",
        "id": 4,
        "type": "tasks",
      },
    ],
  },
  Object {
    "id": 3,
    "name": "QA Checklist Rest",
    "tasks": Array [
      Object {
        "description": "QA Checklist Rest 5",
        "id": 5,
        "type": "tasks",
      },
      Object {
        "description": "QA Checklist Rest 6",
        "id": 6,
        "type": "tasks",
      },
    ],
  },
]
`;

exports[`BaseQUery where()  1`] = `
Object {
  "id": 2,
  "name": "Project Audit Rest",
}
`;
